Document that ?filter_types works on all /activity endpoints (#569)
* Fix typo

* /activity endpoints support ?filter_types

--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -806,9 +806,11 @@ _Path Parameters_
 
 _Query Parameters_
 
-| param             | Type     | Note                                |
-| ----------------- | -------- | ----------------------------------- |
-| cursor (optional) | _string_ | Cursor for page of results to fetch |
+| param             | Type     | Note                                       |
+| ----------------- | -------- | ------------------------------------------ |
+| cursor (optional) | _string_ | Cursor for page of results to fetch        |
+| filter_types      | _string_ | Comma separated list of transaction types  |
+
 
 </TabItem>
 <TabItem value="response">
@@ -884,7 +886,7 @@ _Query Parameters_
 
 | param        | Type     | Note                                       |
 | ------------ | -------- | ------------------------------------------ |
-| filter_types | _string_ | Comma separated list of transasction types |
+| filter_types | _string_ | Comma separated list of transaction types |
 
 </TabItem>
 <TabItem value="response">
