validator release page
new page that provides more visibility when we release validator updates

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -25,8 +25,9 @@ Validators are a new entity on the Helium Blockchain that perform the work of th
 
 ## Mainnet
 
-* [Mainnet Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide) - How to get up and running with your a Validator on Mainnet. This guide covers staking, running, updating, and monitoring.
+* [Mainnet Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide) - How to get up and running with your Validator on Mainnet. This guide covers staking, running, updating, and monitoring.
 * [Validator Mainnet Explorer](https://explorer.helium.com/validators) - The easiest way to monitor the Validator magic on Mainnet. 
+* [Validator Releases](/mine-hnt/validators/mainnet/validators-release) - A description of the type and cadence for Validator releases.
 
 :::warning
 
