--- a/docs/mine-hnt/validators/mainnet/validators-release.mdx
+++ b/docs/mine-hnt/validators/mainnet/validators-release.mdx
@@ -17,20 +17,6 @@ Important and Critical updates will be released out of band when available. Each
 
 |  Color 	|       Type       	| Definition                	| Cadence                                                	| Examples                                                                                                                            	|
 |:------:	|:----------------:	|---------------------------	|--------------------------------------------------------	|-------------------------------------------------------------------------------------------------------------------------------------	|
-|  Green 	|      Update      	| Recommended, on your time 	| Initially every week, gradually move to every 2 weeks 	| Snapshots, non-critical fixes, miner release updates (minor)                                                                        	|
-| Yellow 	| Important update 	| Within 24-48 hrs          	| Out of band (when available)                           	| Fix impacting majority validators, miner release updates (major)                                                                    	|
-|   Red  	|  Critical update 	| Update immediately        	| Out of band (when available)                           	| Serious security issue impacting majority validators, fix to address blockchain halt or other serious blockchain operational issues 	|
-
-
-
-<img
-  src={useBaseUrl("img/validators/green.png")}
-/>
-
-<img
-  src={useBaseUrl("img/validators/yellow.png")}
-/>
-
-<img
-  src={useBaseUrl("img/validators/red.png")}
-/>
+|  	![](/img/validators/green.png) |      Update      	| Recommended, on your time 	| Initially every week, gradually move to every 2 weeks 	| Snapshots, non-critical fixes, miner release updates (minor)                                                                        	|
+| ![](/img/validators/yellow.png) 	| Important update 	| Within 24-48 hrs          	| Out of band (when available)                           	| Fix impacting majority validators, miner release updates (major)                                                                    	|
+|  ![](/img/validators/red.png)  	|  Critical update 	| Update immediately        	| Out of band (when available)                           	| Serious security issue impacting majority validators, fix to address blockchain halt or other serious blockchain operational issues 	|
