--- a/docs/mine-hnt/validators/mainnet/validators-release.mdx
+++ b/docs/mine-hnt/validators/mainnet/validators-release.mdx
@@ -5,7 +5,7 @@ sidebar_label: Release
 slug: /mine-hnt/validators/mainnet/validators-release
 ---
 
-# Validator Release Schedule
+# Validator Releases
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
