--- a/docs/mine-hnt/validators/mainnet/validators-release.mdx
+++ b/docs/mine-hnt/validators/mainnet/validators-release.mdx
@@ -1,5 +1,5 @@
 ---
-id: validators-release
+id: validators-mainnet-release
 title: Validators Release
 sidebar_label: Release
 slug: /mine-hnt/validators/mainnet/validators-release
