--- a/docs/mine-hnt/validators/mainnet/validators-release.mdx
+++ b/docs/mine-hnt/validators/mainnet/validators-release.mdx
@@ -1,7 +1,7 @@
 ---
 id: validators-mainnet-release
 title: Validators Release
-sidebar_label: Release
+sidebar_label: Validator Release
 slug: /mine-hnt/validators/mainnet/validators-release
 ---
 
