--- a/docs/api/blockchain/assert_locations.mdx
+++ b/docs/api/blockchain/assert_locations.mdx
@@ -29,9 +29,12 @@ This route is `cursor` paginated.
 
 _Query Parameters_
 
-| param             | Type     | Note                     |
-| ----------------- | -------- | ------------------------ |
-| cursor (optional) | _string_ | Cursor for page to fetch |
+| param               | Type     | Note                              |
+| ------------------- | -------- | --------------------------------- |
+| cursor (optional)   | _string_ | Cursor for page to fetch          |
+| min_time (optional) | _string_ | First time to include data for    |
+| max_time (optional) | _string_ | Last time to include data for     |
+| limit (optional)    | _number_ | Maximum number of items to return |
 
 </TabItem>
 <TabItem value="response">
