--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -806,11 +806,13 @@ _Path Parameters_
 
 _Query Parameters_
 
-| param             | Type     | Note                                       |
-| ----------------- | -------- | ------------------------------------------ |
-| cursor (optional) | _string_ | Cursor for page of results to fetch        |
-| filter_types      | _string_ | Comma separated list of transaction types  |
-
+| param                   | Type     | Note                                      |
+| ----------------------- | -------- | ----------------------------------------- |
+| cursor (optional)       | _string_ | Cursor for page of results to fetch       |
+| filter_types (optional) | _string_ | Comma separated list of transaction types |
+| min_time (optional)     | _string_ | First time to include data for            |
+| max_time (optional)     | _string_ | Last time to include data for             |
+| limit (optional)        | _number_ | Maximum number of items to return         |
 
 </TabItem>
 <TabItem value="response">
@@ -884,8 +886,8 @@ _Path Parameters_
 
 _Query Parameters_
 
-| param        | Type     | Note                                       |
-| ------------ | -------- | ------------------------------------------ |
+| param        | Type     | Note                                      |
+| ------------ | -------- | ----------------------------------------- |
 | filter_types | _string_ | Comma separated list of transaction types |
 
 </TabItem>
@@ -932,9 +934,12 @@ _Path Parameters_
 
 _Query Parameters_
 
-| param             | Type     | Note                         |
-| ----------------- | -------- | ---------------------------- |
-| cursor (optional) | _string_ | Cursor for the page to fetch |
+| param               | Type     | Note                              |
+| ------------------- | -------- | --------------------------------- |
+| cursor (optional)   | _string_ | Cursor for the page to fetch      |
+| min_time (optional) | _string_ | First time to include data for    |
+| max_time (optional) | _string_ | Last time to include data for     |
+| limit (optional)    | _number_ | Maximum number of items to return |
 
 </TabItem>
 <TabItem value="response">
@@ -1564,9 +1569,12 @@ _Path Parameters_
 
 _Query Parameters_
 
-| param             | Type     | Note                         |
-| ----------------- | -------- | ---------------------------- |
-| cursor (optional) | _string_ | Cursor for the page to fetch |
+| param               | Type     | Note                              |
+| ------------------- | -------- | --------------------------------- |
+| cursor (optional)   | _string_ | Cursor for the page to fetch      |
+| min_time (optional) | _string_ | First time to include data for    |
+| max_time (optional) | _string_ | Last time to include data for     |
+| limit (optional)    | _number_ | Maximum number of items to return |
 
 </TabItem>
 <TabItem value="response">
