--- a/docs/api/blockchain/cities.mdx
+++ b/docs/api/blockchain/cities.mdx
@@ -67,6 +67,55 @@ Lists cities including the word houston in their city, state or country.
 
 ---
 
+## City for City ID
+
+```
+GET https://api.helium.io/v1/cities/:city_id
+```
+
+Fetch a city for a given city id.
+
+<Tabs
+  block={true}
+  defaultValue="request"
+  values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
+<TabItem value="request">
+
+_Path Parameters_
+
+| param              | Type     | Note                    |
+| ------------------ | -------- | ----------------------- |
+| city_id (requires) | _string_ | ID of the city to fetch |
+
+</TabItem>
+<TabItem value="response">
+
+200: OK
+
+City for id `dG9yb250b29udGFyaW9jYW5hZGE`
+
+```json
+{
+  "data": {
+    "short_state": "ON",
+    "short_country": "CA",
+    "short_city": "Toronto",
+    "online_count": 1077,
+    "offline_count": 172,
+    "long_state": "Ontario",
+    "long_country": "Canada",
+    "long_city": "Toronto",
+    "hotspot_count": 1249,
+    "city_id": "dG9yb250b29udGFyaW9jYW5hZGE"
+  }
+}
+```
+
+</TabItem>
+</Tabs>
+
+---
+
 ## List Hotspots for a City
 
 ```
