--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -432,7 +432,7 @@ Also known as **US902-928**
 |--------------------------------------------|--------------|
 |Vanuatu                                     |AS923_3       |
 |Vatican City                                |EU868         |
-|Venezuela                                   |AS923_1       |
+|Venezuela                                   |US915       |
 |Vietnam                                     |AS923_2       |
 
 #### W <a id="w"></a>
