--- a/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
+++ b/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
@@ -23,7 +23,7 @@ repository.
 :::warning
 Data Only Hotspots cannot earn $HNT, at least for now, and after milestone 2
 they will earn $HNT only for Device Packet Transfer. Remember to keep an eye on
-[Light Hotspots Project](https://docs.helium.com/use-the-network/light-hotspots)
+[Light Hotspots Project](/mine-hnt/light-hotspots)
 and the **#gateway-development** channel on the
 [Helium Discord Server](https://discord.gg/helium) to check how the development
 process evolves.
