--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -1,5 +1,5 @@
 ---
-id: proof-of-coverage
+id: 14jWki6pQQa4RgrwuBBumMxtQ3vrU7WiYPMuXCfLYCsHivKuWsv
 hide_title: true
 sidebar_label: Proof of Coverage
 slug: /blockchain/proof-of-coverage
