--- a/docs/mine-hnt/data-only-guides/dragino.mdx
+++ b/docs/mine-hnt/data-only-guides/dragino.mdx
@@ -168,7 +168,7 @@ LoRaWAN settings are not correct per the above.
 As part of Milestone 1.5 of the Light Gateway project roadmap, you will be able to
 onboard data only hotspots such as the Dragino to appear on the coverage map, and then,
 in Milestone 2, earn HNT for data transfers (but not for Proof of Coverage). See
-[Light HotSpots - BETA](/mine-hnt/light-hotspots) for
+[Light Hotspots - BETA](/mine-hnt/light-hotspots) for
 more information. This process will require using the Helium
 [command-line interface (CLI) Wallet](https://github.com/helium/helium-wallet-rs)
 to submit the onboarding and assert location transactions.
