Trying to remove the Conflict from #582, Updated .gitignore based on my yarn install adding a few extra yarn files

--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -1,7 +1,7 @@
 ---
 id: light-hotspots
-title: Light Hotspot Client
-sidebar_label: Light Hotspot Client
+title: Light Hotspot
+sidebar_label: Light Hotspot
 slug: /mine-hnt/light-hotspots
 ---
 
