Trying to remove the Conflict from #582, Updated .gitignore based on my yarn install adding a few extra yarn files

--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -1,7 +1,7 @@
 ---
 id: light-hotspots
-title: Light Hotspot Client
-sidebar_label: Light Hotspot Client
+title: Light Hotspot
+sidebar_label: Light Hotspot
 slug: /mine-hnt/light-hotspots
 ---
 
@@ -123,7 +123,7 @@ earn $HNT.
 
 #### Earn HNT For Device Packet Transfer
 
-- **Target Completion: Summer 2021**
+- **Target Completion: Fall 2021**
 - **Status: Development In Progress**
 
 Data Only Hotspots will earn $HNT for device data transfer.
