--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -42,6 +42,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
     <div class="col col--6">
     	<p>This documentation provides details on the technology that underpins Helium, as well as how to mine HNT, and how to deploy IoT devices that use the Helium Network. Start your journey below. </p>
     	<p>If, at any time, you don't find what you need, join us in <a href="https://discord.gg/helium">our Discord</a>.</p>
+	<p><iframe src="https://discord.com/widget?id=404106811252408320&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></p>
     	<p style={{fontWeight: 600}}>Thanks for being a part of Helium.</p>
     </div>
   </div>
