--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -123,7 +123,7 @@ earn $HNT.
 
 #### Earn HNT For Device Packet Transfer
 
-- **Target Completion: Summer 2021**
+- **Target Completion: Fall 2021**
 - **Status: Development In Progress**
 
 Data Only Hotspots will earn $HNT for device data transfer.
