--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -137,7 +137,7 @@ earning!
 
 - [Dragino LPS80/DLOS8](/mine-hnt/data-only-guides/dragino)
   - Draginos will only mine HNT as a Data Only Hotspot
-- [Kerlink gateways]((/mine-hnt/data-only-guides/kerlink)
+- [Kerlink gateways](/mine-hnt/data-only-guides/kerlink)
   - Kerlink gateways will only mine HNT as Data Only Hotspot unless it is
     specified as a Helium-Compatible Kerlink Miner.
 - [RAK Concentrator (RAK2245/RAK2247/RAK2287) + Raspberry Pi 2, 3, or 4]((/mine-hnt/data-only-guides/rak-concentrators)
