remove double (( on links

--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -140,7 +140,7 @@ earning!
 - [Kerlink gateways](/mine-hnt/data-only-guides/kerlink)
   - Kerlink gateways will only mine HNT as Data Only Hotspot unless it is
     specified as a Helium-Compatible Kerlink Miner.
-- [RAK Concentrator (RAK2245/RAK2247/RAK2287) + Raspberry Pi 2, 3, or 4]((/mine-hnt/data-only-guides/rak-concentrators)
+- [RAK Concentrator (RAK2245/RAK2247/RAK2287) + Raspberry Pi 2, 3, or 4](/mine-hnt/data-only-guides/rak-concentrators)
   - This setup will only mine HNT as a Data Only Hotspot.
 
 :::info
