Light Hotspots and Data Only Hotspots are not hte same thing.  Cleaning up the documentation to make a cleaner line between them"

--- a/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
+++ b/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
@@ -2,7 +2,7 @@
 id: rak-concentrators
 title: Data Only Hotspot Setup with RAK Concentrator + Raspberry Pi
 sidebar_label: RAK Concentrators (RAK2245/RAK2247/RAK2287) + Raspberry Pi
-slug: /use-the-network/light-hotspots/guides/rak-concentrators
+slug: /mine-hnt/data-only-guides/rak-concentrators
 ---
 # Data Only Hotspot Setup with RAK Concentrator + Raspberry Pi
 
@@ -23,7 +23,7 @@ repository.
 :::warning
 Data Only Hotspots cannot earn $HNT, at least for now, and after milestone 2
 they will earn $HNT only for Device Packet Transfer. Remember to keep an eye on
-[Light Hotspots Project](https://docs.helium.com/use-the-network/light-hotspots)
+[Light Hotspots - BETA](/mine-hnt/light-hotspots)
 and the **#gateway-development** channel on the
 [Helium Discord Server](https://discord.gg/helium) to check how the development
 process evolves.
