--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -1,8 +1,8 @@
 ---
 id: light-hotspots
-title: Light Hotspot Client
-sidebar_label: Light Hotspot Client
-slug: /use-the-network/light-hotspots
+title: Light Hotspots
+sidebar_label: Light Hotspots
+slug: /mine-hnt/light-hotspots
 ---
 
 # Light Hotspots - Beta
@@ -163,19 +163,3 @@ on Validators to generate challenges and process witness receipts.
 
 All Hotspots will not need to follow the Blockchain.
 
-## Data-Only Hotspot Setup Guides
-
-- [Dragino LPS80/DLOS8](/use-the-network/light-hotspots/guides/dragino)
-  - Draginos will only mine HNT as a Data Only Hotspot
-- [Kerlink gateways](/use-the-network/light-hotspots/guides/kerlink)
-  - Kerlink gateways will only mine HNT as Data Only Hotspot unless it is
-    specified as a Helium-Compatible Kerlink Miner.
-- [RAK Concentrator (RAK2245/RAK2247/RAK2287) + Raspberry Pi 2, 3, or 4](/use-the-network/light-hotspots/guides/rak-concentrators)
-  - This setup will only mine HNT as a Data Only Hotspot.
-
-:::info
-
-Gateways running a Packet Forwarder and Miner is not considered a Light Hotspot
-and will never earn HNT.
-
-:::
