--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -38,7 +38,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
   		<h2>Hotspots</h2>
   	</div>
     <div class="col col--6">
-    	<p>Want a Hotspot? We have one for everyone.</p>
+    	<p>Want to help build the largest IoT network in the world? Want to provide coverage to IoT devices and earn HNT while you do?</p>
     	<p style={{marginBottom:40}}>Check out some of these quick links for help getting started or join us in the #gateway-development channel on <a href="https://discord.gg/helium">our Discord</a>.</p>
     </div>
       <div class="col col--5 col--offset-1 "  style={{marginBottom: 100}}>
