--- a/docs/use-the-network/console/device-configurations.mdx
+++ b/docs/use-the-network/console/device-configurations.mdx
@@ -94,6 +94,8 @@ On the Inspector click **CF List**.
 
 For quick identification, a symbol appears on the node.
 
+For a video walkthrough of configuring ADR and CF List, check out our Tips and Tricks video [here](https://youtu.be/9nlkAEI1V-Q).
+
 
 ## Alerts
 
@@ -156,3 +158,5 @@ Configuring multiple packets for a device a group of devices involved two main s
     "img/use-the-network/console/flows-inspector-packets.png"
   )}
 />
+
+To learn more about enabling Multiple Packets, check out our Tips and Tricks video [here](https://youtu.be/rDJcGspnq1A).
