--- a/docs/use-the-network/console/flows/flows.mdx
+++ b/docs/use-the-network/console/flows/flows.mdx
@@ -18,6 +18,8 @@ Welcome to Flows. Flows is a visual-centric view of the key elements in Console 
 
 Although Flows is a new feature, it’s designed to be much more intuitive based on core user goals of adding devices, defining functions, and setting up integrations to transfer data to their endpoints.
 
+For a video walkthough of the basic Flows functions, check out our Tips and Tricks video [here](https://youtu.be/XrbN1CHApBI).
+
 - [Flows Orientation](/use-the-network/console/flows/orientation)
 - [Common Actions](/use-the-network/console/flows/actions)
 - [Frequently Asked Questions](/use-the-network/console/flows/flows-faq)
