--- a/docs/use-the-network/console/functions.mdx
+++ b/docs/use-the-network/console/functions.mdx
@@ -119,3 +119,5 @@ You need to attach functions to:
  - a device or group of devices (via a label) and an integration: This results in the function being applied to payloads before being sent to the integration.
 
 Easily attach functions to devices, labels, and integations in the Flows Workspace. For more information about Flows click here [LINK]  
+
+For more information on how to create and attach functions, check out our Tips and Tricks video [here](https://youtu.be/UNUOLbIKXww).
