--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -48,3 +48,5 @@ Devices or groups of devices (via labels) can be connected directly to Integrati
 [Google Sheets](/use-the-network/console/integrations/google-sheets)
 
 [Microshare](/use-the-network/console/integrations/microshare)
+
+For a video walkthrough of how to use Integrations, check out our Tips and Tricks video [here](https://youtu.be/lnERw1f7TGE).
