--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -21,7 +21,7 @@ Device Management includes:
 
 Console is available as a free to use hosted application at [console.helium.com](https://console.helium.com).
 
-Learn more about how to get started using Console with our Tips and Tricks videos [here](https://www.youtube.com/playlist?list=PLtKQNefsR5zNjWkXqdRXeBbSmYWRJFCuo)
+Learn more about how to get started using Console with our Tips and Tricks videos [here](https://www.youtube.com/playlist?list=PLtKQNefsR5zNjWkXqdRXeBbSmYWRJFCuo).
 
 * [Console Quickstart](/use-the-network/console/quickstart)
 * [Flows (**New!**)](/use-the-network/console/flows)
