--- a/docs/use-the-network/console/device-configurations.mdx
+++ b/docs/use-the-network/console/device-configurations.mdx
@@ -17,7 +17,9 @@ There's a number of device configurations available including:
 
 ADR and CF List settings are either enabled/disabled and applied to device or label nodes directly using the Flows Inspector. 
 
+:::info
 For a video walkthrough of configuring ADR and CF List, check out our Tips and Tricks video [here](https://youtu.be/9nlkAEI1V-Q).
+:::
 
 Alerts and Multiple Packets features provide various options which users need to initially configure and then apply to device or label nodes using the Inspector. 
 
