updated integration content
updated integration content for 2.0

--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -23,7 +23,13 @@ Follow the specific integration guides below for more details.
 
 ## Connecting Integrations to Devices
 
-Devices or groups of devices (via labels) can be connected directly to Integrations on the Flows Worskpace. \(See more instructions here.\)
+Devices or groups of devices (via labels) can be directly connected to integrations on the Flows Worskpace. Labels are identifiers used to group devices for easy management. To connect one or more devices to one or more integrations, simply connect the Device and Integration nodes on the Flows Workspace.
+
+:::info
+Quick video tutorial connecting devices to an integration [here](https://www.youtube.com/watch?v=lnERw1f7TGE).
+:::
+
+Node elements (devices, labels, integrations) need to be created before they're available on the Flows Workspace. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
 
 [JSON Schema](/use-the-network/console/integrations/json-schema)
 
