Add link to video guide.

--- a/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
+++ b/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
@@ -29,6 +29,13 @@ and the **#gateway-development** channel on the
 process evolves.
 :::
 
+### Video Guide for Setup
+
+This Hands on with RAKstars session follows the step-by-step provided
+across this guide.
+
+[![Link to YouTube tutorial explaining packet forwarder setup.](https://img.youtube.com/vi/Eyt4bbW_9yw/0.jpg)](https://www.youtube.com/watch?v=Eyt4bbW_9yw&t=2024s)
+
 ## Requirements
 
 - Raspberry Pi, multiple families are supported, however not all the models have
