Fix typo in comment about the module SPI interface.

--- a/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
+++ b/docs/mine-hnt/data-only-guides/rak-concentrators.mdx
@@ -60,8 +60,8 @@ available at the RAK store.
 [RAK2247 Pi HAT]: https://store.rakwireless.com/products/rak2247-pi-hat
 
 :::important
-To use the concentrator module with a Raspberry Pi HAT, you must make sure you
-order you order the variation with the SPI interface.
+To use the concentrator module with a Raspberry Pi HAT, you must make sure to 
+order the variation with the SPI interface.
 :::
 
 Let's get started!
