--- a/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
+++ b/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
@@ -56,7 +56,7 @@ Node elements (devices, labels, integrations) need to be created before they're 
 ### Adding Your Device on myDevices Cayenne
 
 Before adding your device to Cayenne, be sure you've successfully added it to
-the Helium network as well as connected it the myDevices Cayenne integration, if you haven't done so yet, then see how to
+the Helium network as well as connected it the myDevices Cayenne integration. If you haven't done so yet, start
 [here](../adding-devices). Once you have a device added on Console and you have
 verified that packets are being received, you can then proceed to add the device
 on Cayenne.
