Moved installation instructions to open-source/installation based on comment by @kent-willaims

--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -83,3 +83,6 @@ some of the code that makes it possible.
 
 - [Helium Docs](https://github.com/helium/docs) - Docusaurus-based docs for all
   things Helium. (You're reading them.)
+  
+   - [Installation](/open-source/installation) - How to install the needed components 
+   to start helping docs development.
