enabled installation header display

--- a/docs/open-source/installation.mdx
+++ b/docs/open-source/installation.mdx
@@ -1,11 +1,11 @@
 ---
 id: installation
-hide_title: true
+hide_title: false
 sidebar_label: Installation
 slug: /open-source/installation
 ---
 
-# Open source Installation details
+# Open source installation details
 
 ## Node.js
 
