--- a/docs/open-source/installation.mdx
+++ b/docs/open-source/installation.mdx
@@ -5,7 +5,7 @@ sidebar_label: Installation
 slug: /open-source/installation
 ---
 
-# Open source installation details
+# Prerequisite installation guide for docs website development
 
 ## Node.js
 
