--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -6473,9 +6473,39 @@ Fetch counts with `filter_types=validator_heartbeat_v1` for validator
 
 ```json
 {
-  "data": {
-    "validator_heartbeat_v1": 5280
-  }
+	"data": {
+		"vars_v1": 0,
+		"validator_heartbeat_v1": 812,
+		"unstake_validator_v1": 0,
+		"transfer_validator_stake_v1": 0,
+		"transfer_hotspot_v1": 0,
+		"token_burn_v1": 0,
+		"token_burn_exchange_rate_v1": 0,
+		"state_channel_open_v1": 0,
+		"state_channel_close_v1": 0,
+		"stake_validator_v1": 1,
+		"security_exchange_v1": 0,
+		"security_coinbase_v1": 0,
+		"routing_v1": 0,
+		"rewards_v2": 51,
+		"rewards_v1": 0,
+		"redeem_htlc_v1": 0,
+		"price_oracle_v1": 0,
+		"poc_request_v1": 0,
+		"poc_receipts_v1": 0,
+		"payment_v2": 0,
+		"payment_v1": 0,
+		"oui_v1": 0,
+		"gen_gateway_v1": 0,
+		"dc_coinbase_v1": 0,
+		"create_htlc_v1": 0,
+		"consensus_group_v1": 0,
+		"consensus_group_failure_v1": 0,
+		"coinbase_v1": 0,
+		"assert_location_v2": 0,
+		"assert_location_v1": 0,
+		"add_gateway_v1": 0
+	}
 }
 ```
 
