updated response note so it matches response output better

--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -6468,8 +6468,7 @@ _Query Parameters_
 
 200: OK
 
-Fetch counts with `filter_types=validator_heartbeat_v1` for validator
-`1Z7GHfLgGUfnKCnEfZEUUqaPSo4674XyX6SA3ZY93rkSTzm9ALK`
+Fetch counts for validator `1Z7GHfLgGUfnKCnEfZEUUqaPSo4674XyX6SA3ZY93rkSTzm9ALK`
 
 ```json
 {
