--- a/docs/use-the-network/console/device-configurations.mdx
+++ b/docs/use-the-network/console/device-configurations.mdx
@@ -103,6 +103,8 @@ Alerts (email or webhooks) can be configured for a number of conditions related 
 
 User types (e.g., Administrator or Managers) can be specified to receive alerts.
 
+For a video walkthrough of how to set up Alerts in Console 2.0, check out our Tips & Tricks video [here](https://youtu.be/8zt6W_FCQcM)
+
 ### Configuring Alerts
 
 To configure alerts from the Flows workspace, select a Device/Label node or Integration node depending on the type of alert to configure and select the Inspector tab. 
