Adds jas-williams cubecell tutorial

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -73,6 +73,7 @@ Flash your own code and spend your own Data Credits. Setting up a mapper from yo
     * [Disk 91 Mapper Tutorial](https://www.disk91.com/2021/technology/lora/low-cost-lorawan-field-tester/)
 * Helium Dev Kit / RAK WisBlock [via RAKWireless](https://store.rakwireless.com/products/helium-developer-kit), [via ParleyLabs](https://shop.parleylabs.com/collections/iot-developers-products/products/helium-wisblock-connected-kit)
 * [Heltec CubeCell](https://heltec.org/project/htcc-ab02s/)
+    * [Heltec Cubecell Tutorial](https://github.com/jas-williams/CubeCell-Helium-Mapper)
 * [TTGO T-Beam](http://www.lilygo.cn/prod_view.aspx?TypeId=50060&Id=1317&FId=t3:50060:3)
 
 ### Configuration Basics
