--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -13,7 +13,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 The Mappers project is a crowd-sourced effort to build a true-signal coverage map of the Helium network across the globe.
 View Mappers data at [mappers.helium.com](https://mappers.helium.com/). The Mappers tool lets you see the areas that have been explored by participants in the project, and the Helium hotspots that have provided coverage to those areas. By mapping real-world coverage, network users can understand where sensor deployments are proven to work.
 
-Be sure to check out the ongoing conversation in the dedicated #mappers channel on the [Helium Discord Server](https://discord.gg/helium).
+Be sure to check out the ongoing conversation in the dedicated `#mappers` channel on the [Helium Discord Server](https://discord.gg/helium).
 
 ## Mappers Newsletter
 
@@ -24,7 +24,7 @@ Join the Mappers [newsletter](https://www.helium.com/mappers) to stay up to date
 #### How does Mappers work?
 Participants use low cost LoRaWAN devices to survey the real-world network created by Helium. Many contributors bring their mapper with them when they walk, hike, bike, drive or even boat! They’re small and fit well in a pocket or on a car dash. Some have set up their mappers so they’re contributing to the coverage map every time they take a drive.
 
-In order to place a mark on the map, the mapper device sends out a signal with a GPS location encoded. If a Helium Hotspot ‘hears’ that signal, data is passed through the internet and recorded in the Mappers database. The Mappers database uses the GPS information from the Mapper to “light up” the hex on the map.
+In order to place a mark on the map, the mapper device sends out a signal with a GPS location encoded. If a Helium Hotspot ‘hears’ that signal, data is passed through the internet and recorded in the Mappers database. The Mappers database uses the GPS information from the Mapper to ‘light up’ the hex on the map.
 
 ### Why should I contribute to Mappers?
 There are a variety of ways that Mapping is valuable to both hotspot owners and network users.
@@ -41,14 +41,14 @@ No, coverage mapping is entirely voluntary. In order to participate in mapping, 
 Mapping does not make a hotspot earn more HNT through Proof of Coverage.
 The real value is to prove the network, drive adoption, and increase the purchase of data credits by commercial users.
 
-If the hostspots that you are mapping are your own, those data credits are paid back to your hotspots in the form of HNT. Hotspots earn HNT for data packets they transfer, for mapping or otherwise.
+If the hotspots that you are mapping are your own, those data credits are paid back to your hotspots in the form of HNT. Hotspots earn HNT for data packets they transfer, for mapping or otherwise.
 
-### How can I use Mappers for my own Hotspot deployments?
-* Find new locations for hotspots
+### How can I use Mappers for my own hotspot deployments?
+* Find new locations for hotspots.
 * Get real-world information about how far your hotspot reaches.
 * Learn RF data analytics in an interactive way.
 
-### How can I use Mappers for my own Sensor deployments?
+### How can I use Mappers for my own sensor deployments?
 Take a mapping device to the area where you want to deploy sensors and watch to see if it is picked up by a hotspot in the hex where you want to deploy a sensor. If it’s picked up by only one hotspot, decide if you want to deploy an additional hotspot in that area for sensor connection redundancy. Look at existing mapped areas for confirmation that your sensors can be deployed in that area and how many hotspot can pick them up. It only takes one hotspot to receive and transmit data through the internet, but the redundancy offered by the Helium Network helps to ensure that your data is received.
 
 ## Get Started with Mapping
@@ -61,23 +61,35 @@ Fully managed mapping devices are ready to go as soon as they arrive.
 ### Plug & Play
 Console-ready device that you onboard to spend your own Data Credits.
 The [Mappers Quickstart](/use-the-network/coverage-mapping/mappers-quickstart) guide focuses on the the LGT-92, but the steps are effectively the same for any mapping device.
-* [Adeunis Field Test Device](/use-the-network/coverage-mapping/adeunis-mapper)
-* [Dragino LGT-92](/use-the-network/coverage-mapping/mappers-quickstart)
-* [Fiz-Tech Mapper](https://fiz-tech.net/search?type=tag&q=Mapper)
-* [Glamos Walker](https://glamos.eu/product/walker/)
-* [RAK Wireless RAK7200](https://store.rakwireless.com/products/rak7200-lpwan-tracker?variant=29669491867693)
+* Adeunis Field Test Device
+    * [Product page](https://www.adeunis.com/en/produit/ftd-network-tester/)
+    * [Adeunis tutorial](/use-the-network/coverage-mapping/adeunis-mapper)
+* Dragino LGT-92
+    * [Product page](https://www.dragino.com/products/lora-lorawan-end-node/item/142-lgt-92.html)
+    * [Dragino LGT-92 tutorial](/use-the-network/coverage-mapping/mappers-quickstart)
+* Fiz-Tech Mapper
+    * [Product page](https://fiz-tech.net/search?type=tag&q=Mapper)
+* Glamos Walker
+    * [Product page](https://glamos.eu/product/walker/)
+* RAK Wireless RAK7200 
+    * [Product page](https://store.rakwireless.com/products/rak7200-lpwan-tracker?variant=29669491867693)
 
 ### DIY
 Flash your own code and spend your own Data Credits. Setting up a mapper from your own dev board is a great way to learn about LoRaWAN devices on the Helium Network.
-* [Disk91 Mapper](https://shop.ingeniousthings.fr/products/helium-lorawan-field-tester-and-mapper-kit)
-    * [Disk 91 Mapper Tutorial](https://www.disk91.com/2021/technology/lora/low-cost-lorawan-field-tester/)
-* Helium Dev Kit / RAK WisBlock [via RAKWireless](https://store.rakwireless.com/products/helium-developer-kit), [via ParleyLabs](https://shop.parleylabs.com/collections/iot-developers-products/products/helium-wisblock-connected-kit)
-* [Heltec CubeCell](https://heltec.org/project/htcc-ab02s/)
-    * [Heltec Cubecell Tutorial](https://github.com/jas-williams/CubeCell-Helium-Mapper)
-* [TTGO T-Beam](http://www.lilygo.cn/prod_view.aspx?TypeId=50060&Id=1317&FId=t3:50060:3)
+* Ingenious Things Mapper (disk91)
+    * [Product page](https://shop.ingeniousthings.fr/products/helium-lorawan-field-tester-and-mapper-kit)
+    * [Disk91 Mapper tutorial](https://www.disk91.com/2021/technology/lora/low-cost-lorawan-field-tester/)
+* Helium Dev Kit / RAK WisBlock 
+    * [Product page via RAKWireless](https://store.rakwireless.com/products/helium-developer-kit), [Product page via ParleyLabs](https://shop.parleylabs.com/collections/iot-developers-products/products/helium-wisblock-connected-kit)
+    * [Helium Dev Kit tutorial](https://github.com/arkieguy/RAK4631-Helium-Mapper)
+* Heltec CubeCell
+    * [Product page](https://heltec.org/project/htcc-ab02s/)
+    * [Heltec Cubecell tutorial](https://github.com/jas-williams/CubeCell-Helium-Mapper)
+* Lilygo TTGO T-Beam
+    * [Product page](http://www.lilygo.cn/prod_view.aspx?TypeId=50060&Id=1317&FId=t3:50060:3)
 
 ### Configuration Basics
-At its core, contributing to mappers is just a matter of delivering a specific payload through the console. Learn more about the [Mappers API](/use-the-network/coverage-mapping/mappers-api)
+At its core, contributing to Mappers is just a matter of delivering a specific payload through the console. Learn more about the [Mappers API](/use-the-network/coverage-mapping/mappers-api)
 
 ## Understanding the Mappers Visualization
 From within the [Mappers tool](http://mappers.helium.com), clicking on a green hexagon will allow you to get more infomation about the coverage available in that region.
